# PluginDllDemo

./: .gitignore  CMakeLists.txt  README.md  makeXcodeProject.sh  makeall.sh
CryptoClientConsole/: CMakeLists.txt  main.cpp
CryptoClientConsole/CryptoClientConsole/: CMakeLists.txt  EasyCryptoLib.hpp  EasyCryptoLibBad.hpp  main.cpp  makefile  makefile.bak
CryptoClientConsole/CryptoClientConsole.xcodeproj/: project.pbxproj
CryptoClientConsole/CryptoClientConsole.xcodeproj/xcuserdata/anttijuustila.xcuserdatad/xcschemes/: CryptoClientConsole.xcscheme  xcschememanagement.plist
CryptoClientConsole/CryptoClientConsole.xcodeproj/xcuserdata/juustila.xcuserdatad/xcschemes/: CryptoClientConsole.xcscheme  xcschememanagement.plist
EasyCrypto.xcworkspace/: contents.xcworkspacedata
EasyCrypto.xcworkspace/xcshareddata/: EasyCrypto.xcscmblueprint
EasyCrypto.xcworkspace/xcuserdata/anttijuustila.xcuserdatad/: UserInterfaceState.xcuserstate
EasyCrypto.xcworkspace/xcuserdata/juustila.xcuserdatad/: UserInterfaceState.xcuserstate
EasyCryptoClient/: CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.hpp  README.md  jsoncpp.cpp  libboost_system.dylib  makefile.bak
EasyCryptoClient/EasyCryptoClient/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp  makefile
EasyCryptoClient/EasyCryptoClient.xcodeproj/: project.pbxproj
EasyCryptoClient/EasyCryptoClient.xcodeproj/xcuserdata/anttijuustila.xcuserdatad/xcschemes/: EasyCryptoClient.xcscheme  xcschememanagement.plist
EasyCryptoLib/: CMakeCache.txt  CMakeLists.txt  Doxyfile  EasyCryptoConfig.cmake  EasyCryptoDefines.hpp  EasyCryptoLib.cpp  EasyCryptoLib.hpp  EasyCryptoLibBad.cpp  EasyCryptoLibBad.hpp  EasyCryptoPluginAPI.hpp  EasyCryptoPriv.hpp  EasyCryptoPrivMatrix.cpp  EasyCryptoPrivMatrix.hpp  EasyCryptoPrivReverse.cpp  EasyCryptoPrivReverse.hpp  Makefile  README  README.md  doxyfile.in  install_manifest.txt  libEasyCrypto.dylib  mainpage.dox
EasyCryptoLib/EasyCryptoLib/: CMakeLists.txt  ECMasterHeader.hpp  EasyCryptoExceptions.hpp  EasyCryptoLib.cpp  EasyCryptoLib.hpp  EasyCryptoLibBad.cpp  EasyCryptoLibBad.hpp  EasyCryptoPriv.hpp  EasyCryptoPrivMatrix.cpp  EasyCryptoPrivMatrix.hpp  EasyCryptoPrivReverse.cpp  EasyCryptoPrivReverse.hpp  makefile  makefile.bak
EasyCryptoLib/EasyCryptoLib.xcodeproj/: project.pbxproj
EasyCryptoLib/EasyCryptoLib.xcodeproj/xcuserdata/anttijuustila.xcuserdatad/xcschemes/: EasyCryptoLib.xcscheme  xcschememanagement.plist
EasyCryptoLib/EasyCryptoLib.xcodeproj/xcuserdata/juustila.xcuserdatad/xcschemes/: EasyCryptoLib.xcscheme  xcschememanagement.plist
EasyCryptoLib/cmake/: EasyCryptoConfig.cmake  EasyCryptoPluginConfig.cmake
EasyCryptoLib/html/: _e_c_master_header_8hpp_source.html  _easy_crypto_defines_8hpp_source.html  _easy_crypto_exceptions_8hpp_source.html  _easy_crypto_lib_8hpp_source.html  _easy_crypto_lib_bad_8hpp_source.html  _easy_crypto_plugin_a_p_i_8hpp_source.html  _easy_crypto_priv_8hpp_source.html  _easy_crypto_priv_matrix_8hpp_source.html  _easy_crypto_priv_reverse_8hpp_source.html  annotated.html  class_easy_crypto_1_1_easy_crypto_lib-members.html  class_easy_crypto_1_1_easy_crypto_lib.html  class_easy_crypto_1_1_easy_crypto_plugin_a_p_i-members.html  class_easy_crypto_1_1_easy_crypto_plugin_a_p_i.html  classes.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  index.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  todo.html
EasyCryptoLib/html/search/: all_1.js  all_3.js  all_4.js  all_5.js  classes_0.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
EasyCryptoLib/include/EasyCryptoPlugin/: EasyCryptoDefines.hpp  EasyCryptoLib.hpp
EasyCryptoMatrixPlugin/: CMakeLists.txt  EasyCryptoPlugin.cpp  EasyCryptoPlugin.hpp  EasyCryptoPrivMatrix.cpp  EasyCryptoPrivMatrix.hpp
EasyCryptoReversePlugin/: CMakeLists.txt  EasyCryptoPlugin.cpp  EasyCryptoPlugin.hpp
EasyCryptoServer/: CMakeCache.txt  CMakeLists.txt  CryptoServer.cpp  CryptoServer.hpp  Makefile  README.md  ServerAPI.hpp  main.cpp
EasyCryptoServer/EasyCryptoServer/: CMakeLists.txt  CryptoServer.cpp  CryptoServer.hpp  EasyCryptoLib.hpp  Version.hpp  main.cpp  makefile  makefile.bak
EasyCryptoServer/EasyCryptoServer.xcodeproj/: project.pbxproj
EasyCryptoServer/EasyCryptoServer.xcodeproj/xcuserdata/anttijuustila.xcuserdatad/xcschemes/: EasyCryptoServer.xcscheme  xcschememanagement.plist
