cmake_minimum_required(VERSION 3.12)
project(EasyCryptoServer)
set(APP_NAME CryptoServer)

find_package(EasyCrypto REQUIRED)
find_package(Boost 1.68.0 REQUIRED COMPONENTS system)
if (Boost_FOUND AND EasyCrypto_FOUND)
   add_executable(${APP_NAME} main.cpp CryptoServer.cpp CryptoServer.hpp jsoncpp.cpp)
   target_include_directories(${APP_NAME} PUBLIC ${Boost_INCLUDE_DIRS} ${EasyCrypto_INCLUDE_DIRS})
   target_link_libraries(${APP_NAME} ${Boost_LIBRARIES} EasyCrypto::EasyCrypto)
   set_target_properties(${APP_NAME} PROPERTIES CXX_STANDARD 14)
   set_target_properties(${APP_NAME} PROPERTIES DEFINE_SYMBOL "EC_DLL")
endif()
