cmake_minimum_required(VERSION 3.0)
project(EasyCryptoClient)
add_executable(EasyCryptoClient Client.cpp jsoncpp.cpp)
set(CMAKE_CXX_FLAGS "-Wall -std=c++11 -DEC_DLL ${CMAKE_CXX_FLAGS}")
find_library(EASYCRYPTO EasyCrypto)
target_link_libraries(EasyCryptoClient ${EASYCRYPTO})
find_library(BOOSTS boost_system)
target_link_libraries(EasyCryptoClient ${BOOSTS})
